--- a/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
+++ b/src/app/work/projects/automate-design-handovers-with-a-figma-to-code-pipeline.mdx
@@ -7,7 +7,7 @@ images:
   - "/images/projects/project-01/image-03.jpg"
 team:
   - name: "Raditya Wibowo"
-    role: "Software Engineer"
+    role: "Project Manager"
     avatar: "/images/profile.jpg"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
 link: "https://once-ui.com/"
